--- a/app/views/users/_microposts.html.erb
+++ b/app/views/users/_microposts.html.erb
@@ -1,11 +1,11 @@
-<% if users.any? %>
+<% if microposts.any? %>
   <ul class="list-unstyled">
-    <% users.each do |user| %>
+    <% microposts.each do |user| %>
       <li class="media">
         <img class="mr-2 rounded" src="<%= gravatar_url(user, { size: 50 }) %>" alt="">
         <div class="media-body">
           <div>
-            <%= user.name %>
+            <%= microposts %>
           </div>
           <div>
             <p><%= link_to 'View profile', user_path(user) %></p>
@@ -14,5 +14,5 @@
       </li>
     <% end %>
   </ul>
-  <%= paginate users %>
+  <%= paginate microposts %>
 <% end %>
