--- a/app/views/favorites/_create_destroy_button.html.erb
+++ b/app/views/favorites/_create_destroy_button.html.erb
@@ -1,12 +1,12 @@
 <% if current_user.favoriting?(micropost)%>
     <%= form_with(model: current_user.favorites.find_by(micropost_id: micropost.id), local: true, method: :delete) do |f| %>
       <%= hidden_field_tag :micropost_id, micropost.id %>
-      <%= f.submit 'unfavorite', class: 'btn btn-danger' %>
+      <%= f.submit 'unfavorite', class: 'btn btn-success btn-sm' %>
     <% end %>
 <% else %>
     <%= form_with(model: current_user.favorites.build, local: true) do |f| %>
       <%= hidden_field_tag :micropost_id, micropost.id %>
-      <%= f.submit 'favorite', class: 'btn btn-primary' %>
+      <%= f.submit 'favorite', class: 'btn btn-primary btn-sm' %>
     <% end %>
 <% end %>
 
